--- a/font.css
+++ b/font.css
@@ -33,6 +33,14 @@ h2 {
   color: #53647D;
 }
 
+h3 {
+    font-family: "Libre Baskerville", serif;
+  font-weight: 400;
+  font-style: italic;
+  text-align: center;
+  color: #53647D;
+}
+
 
 li {
   font-family: "Kalam", cursive;
