--- a/my-style.css
+++ b/my-style.css
@@ -1,3 +1,9 @@
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+}
+
 .skip-link {
   position: absolute;
   width: 1px;
@@ -8,22 +14,22 @@
   border: 0;
 }
 
-.skip-link:focus{
-  width: unset;
-  height: unset;
+.skip-link:focus {
+  width: auto; 
+  height: auto;
   position: relative;
-  padding: unset;
-  margin: unset;
+  padding: 0.5rem; 
+  margin: 0; 
   font-size: 2rem;
 }
 
 html {
-font-size: 20px;
+  font-size: 20px;
 }
 
 body {
-  margin: 0px;
-  bbackground-color: #a7b6bf 
+  margin: 0;
+  background-color: #a7b6bf; 
 }
 
 main {
@@ -32,28 +38,24 @@ main {
   background: #FFF;
   border-radius: 1rem;
   padding: 1rem 2rem;
-  box-sizing: border-box;
   margin: 1rem auto;
 }
 
-
 nav {
   color: #a7b6bf;
-  background-color: #000000;
+  background-color: #000;
   padding: 0;
-  display: block;
   margin: 0;
   border-bottom: 3px solid #FFF;
 }
 
-ul, ol {
+ul,
+ol {
   list-style-type: none;
-  padding-inline-start: 0px;
-  margin-block-start: 0px;
-  margin-block-end: 0px;
+  padding-inline-start: 0;
+  margin-block-start: 0;
+  margin-block-end: 0;
 }
-
-
 
 nav a {
   color: #22395f;
@@ -65,29 +67,23 @@ a {
   text-decoration: none;
 }
 
-    h1 {
-    font-family: “Old Standard TT”, serif;
+h1 {
+  font-family: "Old Standard TT", serif; 
   font-weight: 700;
-  font-style: normal;
   text-align: center;
-    margin: 1rem;
-    margin-left: 1rem;
-    color: #22395f;
-/*  text-decoration: line-through;*/
-/*  text-transform: uppercase;*/ 
+  margin: 1rem;
+  color: #22395f;
 }
 
 p {
- font-family: "Halant", serif;
+  font-family: "Halant", serif;
   font-weight: 400;
-  font-style: normal;
   text-align: center;
   color: #1a1a2c;
 }
 
-
 h2 {
-    font-family: "Libre Baskerville", serif;
+  font-family: "Libre Baskerville", serif;
   font-weight: 400;
   font-style: italic;
   text-align: center;
@@ -95,27 +91,25 @@ h2 {
 }
 
 h3 {
-    font-family: "Libre Baskerville", serif;
+  font-family: "Libre Baskerville", serif;
   font-weight: 400;
   font-style: italic;
   text-align: center;
   color: #53647D;
 }
 
-
 li {
   font-family: "Kalam", cursive;
   font-weight: 300;
-  font-style: normal;
   text-align: center;
-  list-style: none;
 }
 
 ol li {
   text-transform: uppercase;
 }
 
-nav li, nav li a {
+nav li,
+nav li a {
   width: 100%;
   text-align: center;
   display: flex;
@@ -129,35 +123,30 @@ nav li, nav li a {
   padding: 1rem;
 }
 
-
 footer {
   background: #000;
   color: #a7b6bf;
   width: 100%;
   margin: 0;
   padding: 1rem;
-  box-sizing: border-box;
   text-align: center;
   font-weight: bold;
 }
 
-
-.location-holder, .media-holder {
+.location-holder,
+.media-holder {
   width: 100%;
   margin: 4rem 0;
   display: flex;
   flex-direction: column;
   gap: 1.2rem;
-  box-sizing: border-box;
 }
 
-.image-holder, .text-holder {
+.image-holder,
+.text-holder {
   width: 100%;
-  padding: 0;
-  margin: 0;
   display: flex;
   flex-direction: column;
-  box-sizing: border-box;
 }
 
 .image-holder img {
@@ -171,10 +160,6 @@ address {
 }
 
 .gallery-image {
-  margin-block-start: 0;
-  margin-block-end: 0;
-  margin-inline-start: 0;
-  margin-inline-end: 0;
   margin: 4rem auto;
   width: 100%;
   max-width: 700px;
@@ -200,7 +185,6 @@ button {
   border: none;
   color: #000;
   text-align: center;
-  text-decoration: none;
   font-weight: bold;
   display: block;
   cursor: pointer;
@@ -209,9 +193,7 @@ button {
   border-radius: 5px;
 }
 
-
 @media (min-width: 555px) {
-
   .media-holder {
     flex-direction: row;
   }
@@ -233,12 +215,9 @@ button {
   nav li {
     width: 50%;
   }
-
 }
 
-
 @media (min-width: 800px) {
-
   .image-holder {
     width: 250px;
   }
