--- a/my-style.css
+++ b/my-style.css
@@ -68,7 +68,6 @@ a {
 h1 {
   font-family: "Old Standard TT", serif; 
   font-weight: 700;
-  text-align: center;
   margin: 1rem;
   color: #22395f;
 }
@@ -76,7 +75,6 @@ h1 {
 p {
   font-family: "Halant", serif;
   font-weight: 400;
-  text-align: center;
   color: #1a1a2c;
 }
 
@@ -84,7 +82,6 @@ h2 {
   font-family: "Libre Baskerville", serif;
   font-weight: 400;
   font-style: italic;
-  text-align: center;
   color: #53647D;
 }
 
@@ -92,14 +89,12 @@ h3 {
   font-family: "Libre Baskerville", serif;
   font-weight: 400;
   font-style: italic;
-  text-align: center;
   color: #53647D;
 }
 
 li {
   font-family: "Kalam", cursive;
   font-weight: 300;
-  text-align: center;
 }
 
 ol li {
@@ -116,7 +111,7 @@ nav li a {
 }
 
 .active {
-  background-color: #E3AD16;
+  background-color: #a7b6bf;
   color: #000;
   padding: 1rem;
 }
