--- a/my-style.css
+++ b/my-style.css
@@ -36,23 +36,30 @@ main {
   background: #FFF;
   border-radius: 1rem;
   padding: 1rem 2rem;
+ box-sizing: border-box;
   margin: 1rem auto;
+text-align: center
 }
 
 nav {
-  color: #a7b6bf;
-  background-color: #000;
-  padding: 0;
-  margin: 0;
+  width: 90%;
+  max-width: 1000px;
+   color: #ffffff;
+  border-radius: 1rem;
+  padding: 1rem 2rem;
+  box-sizing: border-box;
+  margin: 1rem auto;
+  text-align: center;
   border-bottom: 3px solid #FFF;
 }
 
 ul,
 ol {
-  list-style-type: none;
-  padding-inline-start: 0;
-  margin-block-start: 0;
-  margin-block-end: 0;
+ width: 85%;
+padding-left: 10px;
+padding-right: 10px;
+margin-right: auto;
+margin-left: auto;
 }
 
 nav a {
@@ -70,12 +77,24 @@ h1 {
   font-weight: 700;
   margin: 1rem;
   color: #22395f;
+	background-color: #f5f5f5;
+		width: 70%;
+		padding-left: 10px;
+		padding-right: 10px;
+		margin-right: auto;
+		margin-left: auto;
+ text-align: center;
 }
 
 p {
   font-family: "Halant", serif;
   font-weight: 400;
   color: #1a1a2c;
+width: 85%;
+		padding-left: 10px;
+		padding-right: 10px;
+		margin-right: auto;
+		margin-left: auto;
 }
 
 h2 {
@@ -83,6 +102,12 @@ h2 {
   font-weight: 400;
   font-style: italic;
   color: #53647D;
+background-color: #f5f5f5;
+		width: 70%;
+		padding-left: 10px;
+		padding-right: 10px;
+		margin-right: auto;
+		margin-left: auto;
 }
 
 h3 {
@@ -90,11 +115,18 @@ h3 {
   font-weight: 400;
   font-style: italic;
   color: #53647D;
+background-color: #f5f5f5;
+		width: 70%;
+		padding-left: 10px;
+		padding-right: 10px;
+		margin-right: auto;
+		margin-left: auto;
 }
 
 li {
-  font-family: "Kalam", cursive;
-  font-weight: 300;
+  font-family: "Halant", serif;
+  font-weight: 200;
+  color: #ffffff;
 }
 
 ol li {
@@ -117,13 +149,13 @@ nav li a {
 }
 
 footer {
-  background: #000;
-  color: #a7b6bf;
-  width: 100%;
-  margin: 0;
-  padding: 1rem;
-  text-align: center;
-  font-weight: bold;
+  	background: #000;
+  	color: #a7b6bf;
+  	width: 100%;
+	text-align: center;
+	margin-left: auto;
+	margin-right: auto;
+	padding-bottom: 0px;
 }
 
 .location-holder,
@@ -135,18 +167,18 @@ footer {
   gap: 1.2rem;
 }
 
-.image-holder,
-.text-holder {
-  width: 100%;
-  display: flex;
-  flex-direction: column;
-}
+  .image-holder {
+    width: 30%;
+	  text-align: center;
+	  margin: auto;
+  }
 
-.image-holder img {
-  width: 100%;
-  max-width: 250px;
-  margin: 0 auto;
-}
+  .text-holder {
+    width: 70%;
+	  text-align: center;
+	  margin: auto;
+  }
+
 
 address {
   font-style: normal;
@@ -161,6 +193,12 @@ address {
 .gallery-image img {
   width: 100%;
 }
+
+img {
+	border-style: double;
+	border-color: #F5F5F5;
+	border-radius: 5px;
+	padding: 5px;
 
 .button_holder {
   display: flex;
@@ -206,7 +244,7 @@ button {
   }
 
   nav li {
-    width: 50%;
+    width: 25%;
   }
 }
 
