--- a/my-style.css
+++ b/my-style.css
@@ -42,14 +42,10 @@ text-align: center
 }
 
 nav {
-  width: 90%;
-  max-width: 1000px;
-   color: #ffffff;
-  border-radius: 1rem;
-  padding: 1rem 2rem;
-  box-sizing: border-box;
-  margin: 1rem auto;
-  text-align: center;
+  color: #a7b6bf;
+background-color: #000;
+padding: 0;
+padding: 0;
   border-bottom: 3px solid #FFF;
 }
 
@@ -168,9 +164,9 @@ footer {
 }
 
   .image-holder {
-    width: 30%;
-	  text-align: center;
-	  margin: auto;
+    width: 100%;
+ display: flex;
+ flex-direction: column;
   }
 
   .text-holder {
@@ -178,6 +174,13 @@ footer {
 	  text-align: center;
 	  margin: auto;
   }
+
+.image-holder img {
+width: 100%;
+max-width: 250px;
+margin: 0 auto;
+
+}
 
 
 address {
@@ -194,11 +197,6 @@ address {
   width: 100%;
 }
 
-img {
-	border-style: double;
-	border-color: #F5F5F5;
-	border-radius: 5px;
-	padding: 5px;
 
 .button_holder {
   display: flex;
