--- a/my-style.css
+++ b/my-style.css
@@ -41,13 +41,50 @@ main {
 text-align: center
 }
 
-nav {
-  color: #a7b6bf;
-background-color: #000;
-padding: 0;
-padding: 0;
-  border-bottom: 3px solid #FFF;
+
+nav ul {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+  }
+
+  nav li {
+    width: 50%;
+  }
+
 }
+
+nav li {
+  width: 25%;
+}
+
+}
+
+nav a {
+  color: #A7B6BF;
+}
+
+a {
+  font-weight: bold;
+  font-style: italic;
+  text-decoration: none;
+}
+
+nav li, nav li a {
+  width: 100%;
+  text-align: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.active {
+  background-color: #A7B6BF;
+  color: #22395f;
+  padding: 1rem;
+}
+
+
 
 ul,
 ol {
@@ -58,15 +95,7 @@ margin-right: auto;
 margin-left: auto;
 }
 
-nav a {
-  color: #22395f;
-}
 
-a {
-  font-weight: bold;
-  font-style: italic;
-  text-decoration: none;
-}
 
 h1 {
   font-family: "Old Standard TT", serif; 
@@ -122,26 +151,11 @@ background-color: #f5f5f5;
 li {
   font-family: "Halant", serif;
   font-weight: 200;
-  color: #ffffff;
+  color: #A7B6BF;
 }
 
 ol li {
   text-transform: uppercase;
-}
-
-nav li,
-nav li a {
-  width: 100%;
-  text-align: center;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.active {
-  background-color: #a7b6bf;
-  color: #000;
-  padding: 1rem;
 }
 
 footer {
