--- a/my-style.css
+++ b/my-style.css
@@ -227,7 +227,7 @@ address {
 button {
   background-color: #22395f;
   border: none;
-  color: #000;
+  color: #ffffff;
   text-align: center;
   font-weight: bold;
   display: block;
