--- a/my-style.css
+++ b/my-style.css
@@ -160,8 +160,8 @@ ol li {
 }
 
 footer {
-  	background: #000;
-  	color: #a7b6bf;
+  	background: #f5f5f5;
+  	color: #53647D;
   	width: 100%;
 	text-align: center;
 	margin-left: auto;
