main-content-link.css

--- a/my-style.css
+++ b/my-style.css
@@ -2,24 +2,6 @@
   box-sizing: border-box;
 }
 
-.skip-link {
-  position: absolute;
-  width: 1px;
-  height: 1px;
-  padding: 0;
-  margin: -1px;
-  overflow: hidden;
-  border: 0;
-}
-
-.skip-link:focus {
-  width: auto; 
-  height: auto;
-  position: relative;
-  padding: 0.5rem; 
-  margin: 0; 
-  font-size: 2rem;
-}
 
 html {
   font-size: 20px;
@@ -238,12 +220,12 @@ button {
 }
 
 
-.skip-link {
+.main-content-link {
   position: absolute;
   top: -3em;
   background: #fff;
 }
-.skip-link:focus {
+.main-content-link:focus {
   top: 0;
 }
 
