--- a/my-style.css
+++ b/my-style.css
@@ -227,6 +227,8 @@ button {
   margin: -1px;
   overflow: hidden;
   border: 0;
+text-align: center;
+color: #f5f5f5;
 }
 
 .main-content-link{
@@ -235,7 +237,6 @@ button {
   position: relative;
   padding: unset;
   margin: unset;
-  font-size: 2rem;
 }
 
 
