--- a/my-style.css
+++ b/my-style.css
@@ -223,11 +223,11 @@ button {
   position: absolute;
   width: 1px;
   height: 1px;
-  padding: 0;
+padding-top: 2em;
   margin: -1px;
   overflow: hidden;
   border: 0;
-text-align: center;
+align-content: center;
 color: #f5f5f5;
 }
 
