--- a/my-style.css
+++ b/my-style.css
@@ -222,7 +222,7 @@ button {
 .main-content-link {
   position: absolute;
   height: 1px;
-  padding-top: 2em;
+  padding-left: 15em;
   margin: -1px;
   border: 0;
   color: #f5f5f5;
