--- a/my-style.css
+++ b/my-style.css
@@ -219,12 +219,23 @@ button {
 	max-height: 500px;
 }
 
-.main-content-link {
+.main-content-link{
   position: absolute;
+  width: 1px;
   height: 1px;
-  padding-left: 15em;
+  padding: 0;
   margin: -1px;
+  overflow: hidden;
   border: 0;
+}
+
+.main-content-link{
+  width: unset;
+  height: unset;
+  position: relative;
+  padding: unset;
+  margin: unset;
+  font-size: 1rem;
   color: #f5f5f5;
 }
 
