--- a/my-style.css
+++ b/my-style.css
@@ -236,7 +236,8 @@ button {
   position: relative;
   padding: unset;
   margin: unset;
-  font-size: 2rem;
+  font-size: 1rem;
+color: #f5f5f5;
 }
 
 
